# nn-data-science

./: README.md  bank_ann.py  car_regression.py  iris_classification.py  main.py  model_iris.pkl  pyproject.toml  requirements.txt
.github/workflows/: check_dist  python-package-conda.yml  python-publish.yml  test_python.yml
csv/: bank_ann.csv  used_honda_price.csv
model_plk/: model_car.pkl
static/css/: styles.css
templates/: about.html  bank_ann.html  base.html  car_regression.html  car_regression_result.html  contact.html  footer.html  header.html  image_cnn.html  index.html  iris_classification.html  iris_classification_result.html  nlp.html  stock_price_rnn.html
