[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]
[tool.setuptools]
py-modules = []

[project]
name = "nn-web"
description = "My machine learning web"
version = "2023.1"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
